Revision history for Perl extension AnyEvent.

5.201 Tue Sep 29 12:09:25 CEST 2009
	- AnyEvent:Handle::on_starttls/on_stoptls methods were broken
          (reported by Torsten Foertsch).
        - common::sense 2.0 could cause tcp_server to throw an exception
          (analysed by elmex).

5.2  Mon Sep 14 07:04:49 CEST 2009
	- INCOMPATIBLE CHANGE: do no longer support register_read_type
          and register_write_type in AnyEvent::Handle, instead support
          package names (the facility was mostly abused).
        - implement "packagename-as-read/write type" support in
          AnyEvent::Handle.
	- AnyEvent::Handle: new options "keepalive" and "oobinline".
        - oobinline set by default to avoid security issues.
        - the pure-perl event loop backend wrongly detected times() fallback
          support (spotted by Pavel Boldin).

5.12 Tue Sep  1 20:26:50 CEST 2009
	- be more lenient when parsing resolv.conf files, as some people
          use hashmarks as comment indicator inside directives (reported
          by Michael S. Fischer).
        - use same set of warnings as common::sense 2.0.
	- fix a potential 32 bit overflow issue due to perl having problems
          with large hex constants in the Perl backend.
        - do not use the slower 5.6 version fo the enc_name code in AnyEvent::DNS
          by default.
        - fix some prototypes.
	- (optionally) require Async::Interrupt 1.02.
        - replace opendns fallbacks by verizon/level3 public dns servers.

5.112 Fri Aug 21 13:59:04 CEST 2009
        - AnyEvent::Handle could cause hard crashes in Net::SSLeay when
          using starttls with an illegal/uncreatable tls context.
        - port to broken win32 perls.

5.111 Sun Aug 16 18:44:36 CEST 2009
	- perl errornously requires sockaddr_un structures returned by the
          kernel to have a specific length. work around this bug by padding
          sockaddr_un structures (found to fail on OS X, as perl only uses